@startuml
!theme plain
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam shadowing false
skinparam class {
    BackgroundColor White
    BorderColor Gray
    ArrowColor Black
}

entity "users" as users {
    * user_id : UUID <<PK>> [gen_random_uuid()]
    --
    * email : VARCHAR(255) <<UQ>>
    * password_hash : VARCHAR(255)
    * role : VARCHAR(20) [USER, STAFF]
    * created_at : TIMESTAMP [now()]
    updated_at : TIMESTAMP
}

entity "user_profiles" as user_profiles {
    * profile_id : UUID <<PK>> [gen_random_uuid()]
    --
    * user_id : UUID <<FK, UQ>>
    * full_name : VARCHAR(150)
    phone_number : VARCHAR(20)
    avatar_url : VARCHAR(500)
    * created_at : TIMESTAMP [now()]
    updated_at : TIMESTAMP
}

entity "categories" as categories {
    * category_id : BIGINT <<PK>> [identity]
    --
    * category_name : VARCHAR(100) <<UQ>>
    description : VARCHAR(500)
    * created_at : TIMESTAMP [now()]
    updated_at : TIMESTAMP
}

entity "tags" as tags {
    * tag_id : BIGINT <<PK>> [identity]
    --
    * tag_name : VARCHAR(100) <<UQ>>
    * created_at : TIMESTAMP [now()]
    updated_at : TIMESTAMP
}

entity "reports" as reports {
    * report_id : UUID <<PK>> [gen_random_uuid()]
    --
    user_id : UUID <<FK>>
    category_id : BIGINT <<FK>>
    * type : VARCHAR(20) [LOST, FOUND]
    * title : VARCHAR(200)
    description : TEXT
    * location_name : VARCHAR(255)
    * event_timestamp : TIMESTAMP
    * status : VARCHAR(20) [OPEN, MATCH_PENDING, CLAIMED, CLOSED, REJECTED]
    * created_at : TIMESTAMP [now()]
    updated_at : TIMESTAMP
}

entity "report_images" as report_images {
    * image_id : BIGINT <<PK>> [identity]
    --
    * report_id : UUID <<FK>>
    * image_url : VARCHAR(500)
    * created_at : TIMESTAMP [now()]
}

entity "report_status_logs" as report_status_logs {
    * log_id : BIGINT <<PK>> [identity]
    --
    * report_id : UUID <<FK>>
    changed_by : UUID <<FK>>
    old_status : VARCHAR(20)
    * new_status : VARCHAR(20)
    * created_at : TIMESTAMP [now()]
}

entity "report_watchers" as report_watchers {
    * watch_id : BIGINT <<PK>> [identity]
    --
    * report_id : UUID <<FK>>
    * user_id : UUID <<FK>>
    * created_at : TIMESTAMP [now()]
}

entity "claims" as claims {
    * claim_id : UUID <<PK>> [gen_random_uuid()]
    --
    * report_id : UUID <<FK>>
    * claimant_id : UUID <<FK>>
    evidence_text : TEXT
    evidence_image_url : VARCHAR(500)
    * claim_status : VARCHAR(20) [PENDING, APPROVED, REJECTED]
    meeting_location : VARCHAR(255)
    meeting_time : TIMESTAMP
    resolved_at : TIMESTAMP
    * created_at : TIMESTAMP [now()]
    updated_at : TIMESTAMP
}

entity "report_tags" as report_tags {
    * report_id : UUID <<PK, FK>>
    * tag_id : BIGINT <<PK, FK>>
    --
    * created_at : TIMESTAMP [now()]
}

users ||--o| user_profiles : "has profile"
users ||--o{ reports : "submits"
categories ||--o{ reports : "categorizes"
reports ||--o{ report_images : "has"
reports ||--o{ report_status_logs : "logs status"
users ||--o{ report_status_logs : "updates status"
reports ||--o{ report_watchers : "watched by"
users ||--o{ report_watchers : "watches"
reports ||--o{ claims : "associated with"
users ||--o{ claims : "files"
reports ||--o{ report_tags : "tagged with"
tags ||--o{ report_tags : "categorizes tag"

@enduml
